AER-1723 adding a copy method for individual files
Copy remains in same bucket, as we currently only support 1 bucket to be used anyway.